# dotfiles

./: .Xresources  .Xresources.swp  .gitignore  .gitlab-ci.yml  .gitmodules  .gitremotes  .zshrc  Dockerfile  LICENSE  Makefile  README.adoc  README.md  colors  colors.sh  config.toml  flake.nix  home.nix  link.sh
.Xresources.d/: .colors  .directory
.Xresources.d/colors/: 5725
.config/i3/: .config.swp  config  i3
.config/neovim/: init.vim
.config/polybar/: .config.swp  config  config_old  polybar  spotify.sh
.config/polybar_test/: config
.config/ranger/: bookmarks
.config/vim/: vim
machines/ffma0089/: configuration.nix  home.nix
machines/liduur/: configuration.nix  hardware-configuration.nix
misc/: .config  .config.old  .config.pre-network-disable  .kernelconfig  bootstrap_setup.cloudconfig  catppuccin-mocha.qss  gnome-colorscheme.sh  mac.xkb  quasseltheme.qss  treestyletab.css  userChrome.css
misc/herbstluft-gnome/: Makefile  README.md  gnome-flashback-3.32.0-1.fc30.x86_64.rpm
misc/userChrome/: userChrome.css  vars.css
modules/alacritty/: default.nix
modules/audio/: default.nix  scream.nix  windows.nix
modules/autologin/: default.nix
modules/common/: darwin.nix  default.nix  linux.nix  udev.nix
modules/config/: default.nix
pkgs/: default.nix
src/: .Xresources  .bashrc  .env  .fehbg  .gitconfig  .gtkrc-2.0  .mbsyncrc  .muttrc  .notmuch-config  .offlineimaprc  .spacemacs  .spacevim  .tmux.conf  .xinitrc  .zshenv  .zshrc  .zshrc.local  .zshrc_old
templates/rust/: .gitignore  Cargo.toml  flake.nix
templates/rust/src/: main.rs
(+364 files in other folders)
