[package]
name = "$NAME"
description = ""
version = "0.0.1"
edition = "2021"
authors = ["Max Audron <audron@cocaine.farm>"]
license = "ISC"
homepage = "https://gitlab.com/cocainefarm/$NAME"
repository = "https://gitlab.com/cocainefarm/$NAME"

[dependencies]
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-flame = "0.2"

# error handling
anyhow = "1"
thiserror = "1"
